--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PORT=10000
 PARSE_URL=https://nestay-backend.onrender.com
 PARSE_APP_ID=nestay
 PARSE_MASTER_KEY=una_master_key_molto_sicura
+#testing
